# cxx-stubtest-workshop

./: CMakeLists.txt
.github/workflows/: cmake.yml
libwed3pm/: CMakeLists.txt
libwed3pm/include/wed3pm/: Affairs.h  DefaultToolkit.h  GoodAffair.h  Toolkit.h
libwed3pm/src/wed3pm/: Affairs.cxx
test-with-simple-stub/: AffairsTest.cxx  CMakeLists.txt  DecoyToolkit.h  GoodAffairTest.cxx
test-with-tiny-mock/: AffairsTest.cxx  CMakeLists.txt  DecoyBuilderToolkit.h  DecoyToolkit.h  GoodAffairTest.cxx  extension.cxx
test-with-tiny-mock/tinymock/: Call.h  Parameters.h  Scenario.h  ScenarioBuilder.h  namespace.h
wed3pm-cli/: CMakeLists.txt  main.cxx
